--- a/16bit/index.html
+++ b/16bit/index.html
@@ -139,6 +139,7 @@
     t.select();
     document.execCommand("Copy");
     document.body.removeChild(t);
+    alert("복사됐습니다");
   }
 
   //indicator
