--- a/index.html
+++ b/index.html
@@ -5,70 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="pccs.css">
   <style media="screen">
-  main.pccs-grid {
-    margin: auto;
-    margin-bottom: 1rem;
-    display: grid;
-    grid-template: repeat(9, 42px) / repeat(9, 42px);
-    justify-items: center;
-    align-items: center;
-    justify-content: center;
+  main section {
+    width: 28px !important;
+    height: 28px !important;
+    font-size: 0.66rem;
+    overflow: hidden;
   }
-  .pccs-grid div {
-    height: 100%;
-    width: 100%;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  /* main section.main_color {
+  width: 28px !important;
+  height: 28px !important;
+  } */
   </style>
-  <title>PCCS</title>
+  <title>16bit Square | PCCS Palette</title>
 </head>
 <body>
   <header id="title_bar">
     <div id="title_image">N</div>
-    <div id="title">PCCS Palette</div>
+    <div id="title">PCCS Palette [16bit]</div>
     <div id="indicator">
       <span id="indicator_"></span>
     </div>
   </header>
-  <main class="pccs-grid">
+  <main id="palette" class="square">
     <script type="text/javascript">
-    for (var j = 0; j <= 8; j++) {
-      for (var i = 0; i <= 8; i++) {
-        document.write("<div id='palette_"+i+"_"+(8-j)+"'>"+i+"_"+(8-j)+"</div>");
+    for (var i = 3; i <= 16; i++) {
+      document.write("<article>");
+      for (var j = 2; j < 16; j++) {
+        var i_ = i.toString(16);
+        var j_ = j.toString(16);
+        document.write('<section id="'+i_+'_'+j_+'" onclick="open_popup(\''+i_+'\',\''+j_+'\')"></section>');
       }
+      document.write("</article>");
     }
     </script>
-  </main>
-  <main class="triangle">
-    <article style="width: 100%;">
-      <section style="width: 37.5%;"></section>
-      <section id="vivid">𝑣</section>
-      <section style="width: 37.5%;"></section>
-    </article>
-    <article class="row">
-      <section style="width: 16rem;"></section>
-      <section id="bright" class="col">𝑏</section>
-      <section id="strong" class="col">𝑠</section>
-      <section id="deep" class="col">𝑑𝑝</section>
-      <section style="width: 16rem;"></section>
-    </article>
-    <article class="row">
-      <section style="width: 8rem;"></section>
-      <section id="light">𝑙</section>
-      <section id="soft">𝑠𝑓</section>
-      <section id="dull">𝑑</section>
-      <section id="dark">𝑑𝑘</section>
-      <section style="width: 8rem;"></section>
-    </article>
-    <article class="row">
-      <section id="pale">𝑝</section>
-      <section id="lightgrayish">𝑙𝑡𝑔</section>
-      <section id="grayish">𝑔</section>
-      <section id="darkgrayish">𝑑𝑘𝑔</section>
-    </article>
   </main>
   <main>
     <div id="controler" class="" style="max-width: 30rem;margin: auto;margin-top: 1rem;margin-bottom: 1rem;">
@@ -93,179 +62,337 @@
         </svg>
       </div>
     </div>
+    <article class="share">
+      <div id="share_title" class="share-title">방금 본 컬러</div>
+      <div class="share-name">H</div>
+      <span id="value_h" class="share-value">?</span>
+      <div class="share-name">S</div>
+      <span id="value_s" class="share-value">?</span>
+      <div class="share-name">L</div>
+      <span id="value_l" class="share-value">?</span>
+      <button class="share-action" onclick="_share_action()">공유</button>
+    </article>
     <div id="popup"></div>
   </main>
   <footer>
-    <a href="https://gall.dcinside.com/p_color/78162" target="_blank">→ Reference</a>
+    <a href="https://gall.dcinside.com/p_color/78192" target="_blank">→ Reference 1</a>
+    <a href="https://gall.dcinside.com/p_color/86472" target="_blank">→ Reference 2</a>
   </footer>
   <script type="text/javascript">
-  const box_title_bar = document.getElementById('title_bar');
+  const box_title = document.getElementById('title_bar');
   const box_title_image = document.getElementById('title_image');
   const box_controler = document.getElementById('controler');
-  const box_indicator_ = document.getElementById('indicator_');
-  const popup = document.getElementById('popup');
-
-  const upup = document.getElementById('upup');
-  const up = document.getElementById('up');
-  const down = document.getElementById('down');
-  const downdown = document.getElementById('downdown');
-
-  const palette_7_4 = document.getElementById('palette_7_4');
-  const palette_8_4 = document.getElementById('palette_8_4');
-  palette_7_4.innerText = "V"
-  palette_8_4.innerText = "V"
-
-  const vivid = document.getElementById('vivid');
-  const bright = document.getElementById('bright');
-  const strong = document.getElementById('strong');
-  const deep = document.getElementById('deep');
-  const light = document.getElementById('light');
-  const soft = document.getElementById('soft');
-  const dull = document.getElementById('dull');
-  const dark = document.getElementById('dark');
-  const pale = document.getElementById('pale');
-  const lightgrayish = document.getElementById('lightgrayish');
-  const grayish = document.getElementById('grayish');
-  const darkgrayish = document.getElementById('darkgrayish');
+  const box_indicator = document.getElementById('indicator_');
+  const box_popup = document.getElementById('popup');
+  const box_value_h = document.getElementById('value_h');
+  const box_value_s = document.getElementById('value_s');
+  const box_value_l = document.getElementById('value_l');
+  const share_title = document.getElementById('share_title');
 
   var hue = parseInt(new URLSearchParams(location.search).get('hue'));
+  var get_s = parseInt(new URLSearchParams(location.search).get('s'));
+  var get_l = parseInt(new URLSearchParams(location.search).get('l'));
+  var get_s_ = parseInt(new URLSearchParams(location.search).get('s_'));
+  var get_l_ = parseInt(new URLSearchParams(location.search).get('l_'));
+
   if (isNaN(hue)) {
     location.search = "?hue=0";
   }
   if (hue > 360) {
-    location.search = "?hue=" + (hue - 360);
+    location.search = "?hue=" + (hue - 360) + "&s_="+get_s_+"&l_="+get_l_;
   }
   if (hue < 0) {
-    location.search = "?hue=" + (hue + 360);
+    location.search = "?hue=" + (hue + 360) + "&s_="+get_s_+"&l_="+get_l_;
+  }
+
+  value_h.innerText = hue;
+
+  function share_fill(x, y) {
+    value_s.innerText = x;
+    value_l.innerText = y;
+    share_title.style.backgroundColor = "hsl(" + hue + ", " + x + "%, " + y + "%)";
+    if (hue > 200 && hue < 280) {
+      if (y < 50 + 0.16*x) {
+        share_title.style.color = "white";
+      } else {
+        share_title.style.color = "black";
+      }
+    } else {
+      if (y < 50 - 0.16*x) {
+        share_title.style.color = "white";
+      } else {
+        share_title.style.color = "black";
+      }
+    }
+  }
+  share_fill(0,0);
+
+  function _share_action() {
+    var t = document.createElement("textarea");
+    document.body.appendChild(t);
+    t.value = location.hostname + location.pathname + "?hue="+hue+"&s="+(value_s.innerText/6.25)+"&l="+(value_l.innerText/6.25);
+    t.select();
+    document.execCommand("Copy");
+    document.body.removeChild(t);
+    alert("복사됐습니다");
+  }
+
+  //indicator
+  function indic(x, y) {
+    if (x > 0) {
+      box_indicator.innerText = y;
+      box_indicator.style.backgroundColor = "deepskyblue";
+    } else {
+      box_indicator.innerText = y;
+      box_indicator.style.backgroundColor = "yellow";
+    }
+  }
+  switch (true) {
+    case (hue < 18):
+    indic(0, "#웜레드");
+    box_title_image.innerText = "W";
+    break;
+    case (hue < 47):
+    indic(0, "#주황");
+    box_title_image.innerText = "N";
+    break;
+    case (hue < 62):
+    indic(0, "#웜노랑");
+    box_title_image.innerText = "W";
+    break;
+    case (hue < 81):
+    indic(1, "#쿨노랑");
+    box_title_image.innerText = "C";
+    break;
+    case (hue < 164):
+    indic(0, "#웜초록");
+    box_title_image.innerText = "W";
+    break;
+    case (hue < 187):
+    indic(1, "#쿨민트");
+    box_title_image.innerText = "C";
+    break;
+    case (hue < 237):
+    indic(0, "#웜파랑");
+    box_title_image.innerText = "W";
+    break;
+    case (hue < 242):
+    indic(0, "#미지근파랑");
+    box_title_image.innerText = "N";
+    break;
+    case (hue < 273):
+    indic(1, "#쿨파랑");
+    box_title_image.innerText = "C";
+    break;
+    case (hue < 290):
+    indic(0, "#웜보라");
+    box_title_image.innerText = "W";
+    break;
+    case (hue < 322):
+    indic(1, "#쿨보라");
+    box_title_image.innerText = "C";
+    break;
+    case (hue < 332):
+    indic(1, "#쿨핑크");
+    box_title_image.innerText = "C";
+    break;
+    case (hue < 341):
+    indic(0, "#웜핑크");
+    box_title_image.innerText = "W";
+    break;
+    case (hue < 351):
+    indic(0, "#미지근마젠타");
+    box_title_image.innerText = "N";
+    break;
+    default:
+    indic(1,"#쿨레드");
+    box_title_image.innerText = "C";
   }
 
   // 색상값 설정
-  box_title_bar.style.backgroundColor = "hsl(" + hue + ", 50%, 50%)";
+  box_title.style.backgroundColor = "hsl(" + hue + ", 50%, 50%)";
   box_title_image.style.backgroundColor = "hsl(" + hue + ", 50%, 20%)";
   box_title_image.style.color = "hsl(" + hue + ", 50%, 50%)";
   document.getElementById('title').style.color = "hsl(" + hue + ", 50%, 20%)";
   box_controler.style.backgroundColor = "hsl(" + hue + ", 50%, 50%)";
 
-  for (var i = 0; i <= 8; i++) {
-    for (var j = 0; j <= 8; j++) {
-      document.getElementById('palette_'+i+'_'+(8-j)).style.backgroundColor = "hsl("+hue+", "+(i*12.5)+"%, "+(100-j*12.5)+"%)";
+  upup.style.backgroundColor = "hsl(" + (hue + 30) + ", 66%, 66%)";
+  up.style.backgroundColor = "hsl(" + (hue + 15) + ", 66%, 66%)";
+  down.style.backgroundColor = "hsl(" + (hue - 15) + ", 66%, 66%)";
+  downdown.style.backgroundColor = "hsl(" + (hue - 30) + ", 66%, 66%)";
+
+  for (var i = 3; i <= 16; i++) {
+    for (var j = 2; j < 16; j++) {
+      var i_16 = i.toString(16);
+      var j_16 = j.toString(16);
+      var color_gen = "hsl("+hue+","+(i * 6.25)+"%,"+(j * 6.25)+"%)";
+      var target = document.getElementById(i_16 + '_' + j_16);
+      box_popup.innerHTML += "<div id='full_"+i_16+"_"+j_16+"' onclick='close_popup(\""+i_16+"\",\""+j_16+"\")'></div>";
+      target.style.backgroundColor = color_gen;
+      var target_ = document.getElementById('full_' + i_16 + '_' + j_16);
+      target_.style.backgroundColor = color_gen;
+      if (hue > 205 && hue < 290) {
+        if (j < 8 + 0.16*i) {
+          target.style.color = "white";
+          target_.style.color = "white";
+        }
+      } else {
+        if (j < 8 - 0.16*i) {
+          target.style.color = "white";
+          target_.style.color = "white";
+        }
+      }
     }
   }
 
-  const v_vivid = "hsl(" + hue + ", 90%, 50%)";
-  const v_bright = "hsl(" + hue + ", 70%, 75%)";
-  const v_strong = "hsl(" + hue + ", 70%, 50%)";
-  const v_deep = "hsl(" + hue + ", 70%, 25%)";
-  const v_light = "hsl(" + hue + ", 50%, 80%)";
-  const v_soft = "hsl(" + hue + ", 50%, 60%)";
-  const v_dull = "hsl(" + hue + ", 50%, 40%)";
-  const v_dark = "hsl(" + hue + ", 50%, 20%)";
-  const v_pale = "hsl(" + hue + ", 17%, 86%)";
-  const v_lightgrayish = "hsl(" + hue + ", 25%, 73%)";
-  const v_grayish = "hsl(" + hue + ", 14%, 47%)";
-  const v_darkgrayish = "hsl(" + hue + ", 5%, 29%)";
-
-  upup.style.backgroundColor = "hsl(" + (hue + 32) + ", 80%, 50%)";
-  up.style.backgroundColor = "hsl(" + (hue + 16) + ", 80%, 50%)";
-  down.style.backgroundColor = "hsl(" + (hue - 16) + ", 80%, 50%)";
-  downdown.style.backgroundColor = "hsl(" + (hue - 32) + ", 80%, 50%)";
-
-  vivid.style.backgroundColor = v_vivid;
-
-  bright.style.backgroundColor = v_bright;
-  strong.style.backgroundColor = v_strong;
-  deep.style.backgroundColor = v_deep;
-
-  light.style.backgroundColor = v_light;
-  soft.style.backgroundColor = v_soft;
-  dull.style.backgroundColor = v_dull;
-  dark.style.backgroundColor = v_dark;
-
-  pale.style.backgroundColor = v_pale;
-  lightgrayish.style.backgroundColor = v_lightgrayish;
-  grayish.style.backgroundColor = v_grayish;
-  darkgrayish.style.backgroundColor = v_darkgrayish;
-
   upup.onclick = function() {
-    location.search = "?hue=" + (hue + 10);
+    location.search = "?hue=" + (hue + 10) + "&s_="+value_s.innerText/6.25+"&l_=" + value_l.innerText/6.25;
   }
   up.onclick = function() {
-    location.search = "?hue=" + (hue + 5);
+    location.search = "?hue=" + (hue + 5) + "&s_="+value_s.innerText/6.25+"&l_=" + value_l.innerText/6.25;
   }
   down.onclick = function() {
-    location.search = "?hue=" + (hue - 5);
+    location.search = "?hue=" + (hue - 5) + "&s_="+value_s.innerText/6.25+"&l_=" + value_l.innerText/6.25;
   }
   downdown.onclick = function() {
-    location.search = "?hue=" + (hue - 10);
+    location.search = "?hue=" + (hue - 10) + "&s_="+value_s.innerText/6.25+"&l_=" + value_l.innerText/6.25;
+  }
+  function tag_(s,l,c) {
+    document.getElementById(s+'_'+l).innerText = c;
+    document.getElementById('full_'+s+'_'+l).innerText = c;
   }
 
-  popup.onclick = function() {
-    popup.style.display = "none";
+  tag_('4','4','dkg');
+  tag_('5','4','dkg');
+  tag_('6','4','dkg');
+  tag_('7','4','dkg');
+  tag_('8','4','dkg');
+  tag_('b','4','dk:dkg');
+  tag_('c','4','dk:dkg');
+  tag_('e','4','dk');
+  tag_('f','4','dk');
+  tag_('10','4','dk');
+
+  tag_('4','5','g:dkg');
+  tag_('5','5','g:dkg');
+  tag_('6','5','g:dkg');
+  tag_('a','5','d');
+  tag_('b','5','d');
+  tag_('c','5','d:dk');
+  tag_('d','5','d:dk');
+  tag_('e','5','dp:dk');
+  tag_('f','5','dp:dk');
+  tag_('10','5','dp:dk');
+
+  tag_('4','6','g');
+  tag_('5','6','g');
+  tag_('6','6','g');
+  tag_('7','6','g');
+  tag_('8','6','d:g');
+  tag_('9','6','d');
+  tag_('a','6','d');
+  tag_('b','6','d');
+  tag_('c','6','d:dp');
+  tag_('d','6','dp');
+  tag_('e','6','dp');
+  tag_('f','6','dp');
+
+  tag_('4','7','g');
+  tag_('5','7','g');
+  tag_('6','7','g');
+  tag_('8','7','d:g');
+  tag_('9','7','d');
+  tag_('a','7','d');
+  tag_('d','7','s:dp');
+  tag_('e','7','s:dp');
+  tag_('10','7','v:dp');
+
+  tag_('4','8','ltg:g');
+  tag_('5','8','ltg:g');//mg 중복
+  tag_('8','8','sf:d');
+  tag_('9','8','sf:d');
+  tag_('a','8','sf:d');
+  tag_('b','8','sf:s:d');
+  tag_('c','8','s');
+  tag_('d','8','s');
+  tag_('e','8','s');
+  tag_('f','8','v');
+  tag_('10','8','v');
+
+  tag_('4','9','ltg:g');//mg 중복
+  tag_('5','9','ltg:g');//mg 중복
+  tag_('9','9','sf');
+  tag_('a','9','sf');
+  tag_('b','9','sf:s');
+  tag_('c','9','');
+  tag_('d','9','b:s');
+  tag_('e','9','b:s');
+  tag_('10','9','b:v');
+
+  tag_('8','a','ltg:sf');
+  tag_('9','a','sf');
+  tag_('a','a','sf');
+  tag_('b','a','sf');
+  tag_('c','a','sf:b');
+  tag_('d','a','b');
+  tag_('e','a','b');
+  tag_('f','a','b');
+
+  tag_('5','b','ltg');
+  tag_('6','b','ltg');
+  tag_('7','b','ltg');
+  tag_('9','b','ltg:sf');
+  tag_('a','b','sf');
+  tag_('b','b','sf');
+  tag_('c','b','l:sf');
+  tag_('e','b','l:b');
+  tag_('f','b','l:b');
+  tag_('10','b','l:b');
+
+  tag_('5','c','ltg');
+  tag_('6','c','ltg');
+  tag_('7','c','ltg');
+  tag_('8','c','ltg');
+  tag_('d','c','l:sf');
+  tag_('e','c','l');
+  tag_('f','c','l');
+  tag_('10','c','l');
+
+  tag_('8','d','p:lg');
+  tag_('9','d','p:lg');
+  tag_('d','d','p:l');
+  tag_('e','d','p:l');
+
+  tag_('9','e','p:lg');
+  tag_('b','e','p');
+  tag_('c','e','p');
+  tag_('d','e','p');
+  tag_('e','e','p');
+  tag_('f','e','p');
+
+  tag_('6','f','(vp)');
+  tag_('7','f','(vp)');
+  tag_('8','f','(vp)');
+  tag_('9','f','(vp)');
+
+  function open_popup(x,y) {
+    share_fill(Number.parseInt(x, 16)*6.25, Number.parseInt(y, 16)*6.25);
+    var get_popup = document.getElementById('full_'+x+'_'+y);
+    get_popup.style.display = "flex";
+    if (!isNaN(get_popup.innerText)) {
+      get_popup.style.fontSize = "1rem";
+      get_popup.innerText = "hsl("+hue+", "+(Number.parseInt(x, 16)*6.25)+"%, "+(Number.parseInt(y, 16)*6.25)+"%)";
+    }
+  }
+  function close_popup(x,y) {
+    document.getElementById('full_'+x+'_'+y).style.display = "none";
   }
 
-  function open_popup() {
-    popup.style.display = "flex";
+  if (!isNaN(get_s) && !isNaN(get_l)) {
+    open_popup(get_s.toString(16), get_l.toString(16));
   }
-
-  vivid.onclick = function() {
-    popup.style.backgroundColor = v_vivid;
-    popup.innerHTML = "<h2>vivid</h2>";
-    open_popup();
-  }
-  bright.onclick = function() {
-    popup.style.backgroundColor = v_bright;
-    popup.innerHTML = "<h2>bright</h2>";
-    open_popup();
-  }
-  strong.onclick = function() {
-    popup.style.backgroundColor = v_strong;
-    popup.innerHTML = "<h2>strong</h2>";
-    open_popup();
-  }
-  deep.onclick = function() {
-    popup.style.backgroundColor = v_deep;
-    popup.innerHTML = "<h2>deep</h2>";
-    open_popup();
-  }
-  light.onclick = function() {
-    popup.style.backgroundColor = v_light;
-    popup.innerHTML = "<h2>light</h2>";
-    open_popup();
-  }
-  soft.onclick = function() {
-    popup.style.backgroundColor = v_soft;
-    popup.innerHTML = "<h2>soft</h2>";
-    open_popup();
-  }
-  dull.onclick = function() {
-    popup.style.backgroundColor = v_dull;
-    popup.innerHTML = "<h2>dull</h2>";
-    open_popup();
-  }
-  dark.onclick = function() {
-    popup.style.backgroundColor = v_dark;
-    popup.innerHTML = "<h2>dark</h2>";
-    open_popup();
-  }
-  pale.onclick = function() {
-    popup.style.backgroundColor = v_pale;
-    popup.innerHTML = "<h2>pale</h2>";
-    open_popup();
-  }
-  lightgrayish.onclick = function() {
-    popup.style.backgroundColor = v_lightgrayish;
-    popup.innerHTML = "<h2>lightgrayish</h2>";
-    open_popup();
-  }
-  grayish.onclick = function() {
-    popup.style.backgroundColor = v_grayish;
-    popup.innerHTML = "<h2>grayish</h2>";
-    open_popup();
-  }
-  darkgrayish.onclick = function() {
-    popup.style.backgroundColor = v_darkgrayish;
-    popup.innerHTML = "<h2>darkgrayish</h2>";
-    open_popup();
+  if (!isNaN(get_s_) && !isNaN(get_l_)) {
+    share_fill(get_s_*6.25, get_l_*6.25);
   }
   </script>
 </body>
