--- a/16bit/index.html
+++ b/16bit/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <script type="text/javascript">
-  if (window.innerWidth > 28*36) {
+  if (window.innerWidth > 28*32) {
     location.href = "../32bit";
   }
   </script>
@@ -45,15 +45,10 @@
     </script>
   </main>
   <main>
-    <div id="controler" class="" style="max-width: 30rem;margin: auto;margin-top: 1rem;margin-bottom: 1rem;">
-      <div id="upup" class="multi">
-        <svg xmlns="http://www.w3.org/2000/svg" width="64px" height="64px" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-        </svg>
-      </div>
-      <div id="up" style="">
-        <svg xmlns="http://www.w3.org/2000/svg" width="48px" height="48px" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+    <div id="controler" class="" style="max-width: 30rem;margin: auto;">
+      <div id="downdown" class="multi">
+        <svg xmlns="http://www.w3.org/2000/svg" width="64px" height="64px" fill="currentColor" class="bi bi-dash" viewBox="0 0 16 16">
+          <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
         </svg>
       </div>
       <div id="down" style="">
@@ -61,9 +56,14 @@
           <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
         </svg>
       </div>
-      <div id="downdown" class="multi">
-        <svg xmlns="http://www.w3.org/2000/svg" width="64px" height="64px" fill="currentColor" class="bi bi-dash" viewBox="0 0 16 16">
-          <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+      <div id="up" style="">
+        <svg xmlns="http://www.w3.org/2000/svg" width="48px" height="48px" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+      </div>
+      <div id="upup" class="multi">
+        <svg xmlns="http://www.w3.org/2000/svg" width="64px" height="64px" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
         </svg>
       </div>
     </div>
@@ -313,7 +313,7 @@
   tag_('10','7','v:dp');
 
   tag_('4','8','ltg:g');
-  tag_('5','8','ltg:g');//mg 중복
+  tag_('5','8','ltg:g');
   tag_('8','8','sf:d');
   tag_('9','8','sf:d');
   tag_('a','8','sf:d');
@@ -324,8 +324,8 @@
   tag_('f','8','v');
   tag_('10','8','v');
 
-  tag_('4','9','ltg:g');//mg 중복
-  tag_('5','9','ltg:g');//mg 중복
+  tag_('4','9','ltg:g');
+  tag_('5','9','ltg:g');
   tag_('9','9','sf');
   tag_('a','9','sf');
   tag_('b','9','sf:s');
