--- a/32bit/index.html
+++ b/32bit/index.html
@@ -5,16 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../pccs.css">
   <style media="screen">
-  main section {
-    width: 28px !important;
-    height: 28px !important;
-    font-size: 0.66rem;
-    overflow: hidden;
+  .palette-grid-32 {
+    display: grid;
+    grid-template: repeat(32, 28px) / repeat(32, 28px);
+    justify-content:center;
+    max-width: 60rem;
   }
-  /* main section.main_color {
-  width: 28px !important;
-  height: 28px !important;
-  } */
   </style>
   <title>32bit Square | PCCS Palette</title>
 </head>
@@ -31,14 +27,14 @@
       <span id="indicator_"></span>
     </div>
   </header>
-  <main id="palette" class="square" style="max-width: 60rem;flex-direction: row-reverse">
+  <main class="palette-grid palette-grid-32">
     <script type="text/javascript">
-    for (var i = 0; i < 32; i++) {
-      document.write("<article style='flex-direction: column'>");
-      for (var j = 0; j < 32; j++) {
-        document.write('<section id="'+(32-i)+'_'+(32-j)+'" onclick="open_popup(\''+(32-i)+'\',\''+(32-j)+'\')"></section>');
+    for (var l = 0; l < 32; l++) {
+      for (var s = 0; s < 32; s++) {
+        var s_ = s + 1;
+        var l_ = 32 - l;
+        document.write('<div id="'+s_+'_'+l_+'" onclick="open_popup(\''+s_+'\',\''+l_+'\')"></div>');
       }
-      document.write("</article>");
     }
     </script>
   </main>
